2005-11-11  Sebastien Pouliot  <sebastien@ximian.com>

	* StringBuilder.cs: Fix ISerializable.GetObjectData (remoting tests 
	were failing under 2.0) and two possible integer overflow in CopyTo.

2005-11-11  Miguel de Icaza  <miguel@novell.com>

	* StringBuilder.cs (Text): Added serialization support in 2.x. 

2005-10-22  Jonathan Pryor  <jonpryor@vt.edu>

	* UTF8Encoding.cs (InternalGetChars/InternalGetCharCount): Fix lead byte
	  check logic for 6 octet sequences.  ((ch & 0xFC) == 0xFC) is always true 
	  for 0xFF, even though 0xFF isn't a valid lead byte.  It should be 
	  ((ch & 0xFE) == 0xFC).

2005-08-25  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : (InternalGetChars/InternalGetCharCount):
	  Don't exclude FEFF in the resulting text.

2005-06-21  Ben Maurer  <bmaurer@ximian.com>

	* StringBuilder.cs (Replace): Do the correct thing when we replace
	with a longer string. Thanks to Alexander Beznozdrev
	<abeznozdrev@croc.ru>

2005-05-26  Ben Maurer  <bmaurer@ximian.com>

	* Encoding.cs: Use static object for locking. `volatile' to
	prevent double checked locking error.

	* StringBuilder.cs: Remove = null inits on fields, saves a few
	instructions. When we compare _cached_str == _str, we are only
	interested in pointer based equality, so just do that.

2005-05-06  Ben Maurer  <bmaurer@ximian.com>

	* StringBuilder.cs (InternalEnsureCapacity): It is possible that
	the size we attempt to grow to is more than the max capacity, but
	that a smaller size will do. In this case, don't throw an
	exception. Fixes #72244

2005-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* NormalizationForm.cs : new file.

2005-03-20  Ben Maurer  <bmaurer@ximian.com>

	* StringBuilder.cs (set_Length): If we set the length, we must
	clobber the cached string.

2005-03-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnicodeEncoding.cs: same fix (\uFEFF) but for Unicode. Patch by
	Svetlana Zholkovsky.

2005-03-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>
