@@ -1,9 +1,18 @@
+2005-11-14  Miguel de Icaza  <miguel@novell.com>
+
+	* ASCIIEncoding.cs, Encoding: Another snack, just a few methods
+	missing.  
+
+	Also add some checks that were missing.
+
 2005-11-11  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* StringBuilder.cs: Fix ISerializable.GetObjectData (remoting tests 
 	were failing under 2.0) and two possible integer overflow in CopyTo.
 
 2005-11-11  Miguel de Icaza  <miguel@novell.com>
+
+	* Encoding.cs, UnicodeEncoding.cs: A few 2.x methods. 
 
 	* StringBuilder.cs (Text): Added serialization support in 2.x. 
 
